--- a/src/poo2/login/views/LoginView.fxml
+++ b/src/poo2/login/views/LoginView.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
 
-<GridPane style="-fx-background-color: #ECF0F1; -fx-padding: 10;" 
-xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" 
-fx:controller="poo2.login.controllers.LoginController">
 
-   <columnConstraints>
-      <ColumnConstraints maxWidth="88.0" minWidth="79.0" prefWidth="88.0" />
-      <ColumnConstraints maxWidth="163.0" minWidth="154.0" prefWidth="154.0" />
+<GridPane prefHeight="151.0" prefWidth="261.0" style="-fx-background-color: #ECF0F1; -fx-padding: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poo2.login.controllers.LoginController">
+
+         <columnConstraints>
+      <ColumnConstraints maxWidth="109.0" minWidth="79.0" prefWidth="89.0" />
+      <ColumnConstraints maxWidth="163.0" minWidth="133.0" prefWidth="153.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints />
       <RowConstraints />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
@@ -26,15 +30,17 @@ fx:controller="poo2.login.controllers.LoginController">
    </rowConstraints>
    <children>
       <Label text="Contraseña:" GridPane.rowIndex="1" />
-      <Label prefHeight="17.0" prefWidth="52.0" text="Usuario:" />
+      <Label prefHeight="17.0" prefWidth="75.0" text="Usuario:" />
       <TextField fx:id="userField" prefHeight="27.0" prefWidth="152.0" GridPane.columnIndex="1" />
       <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <HBox alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="154.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+      <HBox alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="154.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
          <children>
             <Button mnemonicParsing="false" onAction="#handleCleanButtonAction" text="Limpiar" />
             <Button mnemonicParsing="false" onAction="#handleStartButtonAction" text="Iniciar" />
          </children>
       </HBox>
-      <Text fx:id="mensajeText" fill="#e80505" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="230.2060546875" GridPane.rowIndex="7" />
+      <Text fx:id="mensajeText" fill="#e80505" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="230.2060546875" GridPane.rowIndex="8" />
+      <Label text="Hora ingreso:" GridPane.rowIndex="2" />
+      <TextField fx:id="logInTimeField" promptText="formato:HH:MM(24h)" GridPane.columnIndex="1" GridPane.rowIndex="2" />
    </children>
 </GridPane>
