--- a/src/poo2/login/views/WelcomeScreenView.fxml
+++ b/src/poo2/login/views/WelcomeScreenView.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<GridPane style="-fx-background-color: #ECF0F1; -fx-padding: 10;" 
-xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" 
-fx:controller="poo2.login.controllers.WelcomeScreenController">
+<GridPane style="-fx-background-color: #ECF0F1; -fx-padding: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poo2.login.controllers.WelcomeScreenController">
 
    <columnConstraints>
       <ColumnConstraints />
@@ -18,6 +19,7 @@ fx:controller="poo2.login.controllers.WelcomeScreenController">
    <rowConstraints>
       <RowConstraints />
       <RowConstraints />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints />
       <RowConstraints />
       <RowConstraints />
@@ -28,7 +30,7 @@ fx:controller="poo2.login.controllers.WelcomeScreenController">
             <Font size="34.0" />
          </font>
       </Text>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-padding: 20;" GridPane.rowIndex="2">
+      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-padding: 20;" GridPane.rowIndex="3">
          <children>
             <Circle fill="DODGERBLUE" radius="49.0" stroke="BLACK" strokeType="INSIDE" />
             <Circle fill="DODGERBLUE" layoutX="79.0" layoutY="79.0" radius="49.0" stroke="BLACK" strokeType="INSIDE" />
@@ -41,5 +43,22 @@ fx:controller="poo2.login.controllers.WelcomeScreenController">
             <Text fx:id="nombreCompletoField" strokeType="OUTSIDE" strokeWidth="0.0" />
          </children>
       </HBox>
+      <GridPane GridPane.rowIndex="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="131.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="203.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <Label layoutX="10.0" layoutY="7.0" text="Hora de Ingreso:" />
+               </children>
+            </AnchorPane>
+            <Text fx:id="horaIngresoField" strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </GridPane>
